@@ -37,7 +37,7 @@
 
   setfont kbd_mode
   Xorg xset
-  xkbcomp setxkbmap
+  xmodmap <!-- should be "xkbcomp setxkbmap", but can't be because of #35912 -->
 
   fb2png
   perl
@@ -75,6 +75,7 @@
   libshadow.so
 </from>
 
+<!--
 <from dir="/usr/share/X11/xkb">
  <filter subst="s!//.*!!">
   geometry/pc
@@ -88,6 +89,7 @@
   </from>
  </filter>
 </from>
+-->
 
 <from dir="/usr/share/fonts/">
   <to flatten="on">
@@ -400,6 +402,7 @@
 <from dir="share">
   <from expand="tar">
     fonts.tar.bz2
+    keyboards.tar.bz2
     keymaps.tar.bz2
   </from>
 
