@@ -1,3 +1,4 @@
+- revert to using xmodmap instead of xkb (workaround bug #35912)
 - handle new drivers: 
   o ethernet: cpmac
   o gigabit: ipg
